// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getReducerCases FAIL empty state 1`] = `
Object {
  "requests": Object {
    "eat:https://api.co/fruits": Object {
      "endedAt": "2017-01-01T00:00:00.000Z",
      "hasFailed": true,
      "hasSucceeded": false,
    },
  },
}
`;

exports[`getReducerCases FAIL full state 1`] = `
Object {
  "requests": Object {
    "anotherURL": Object {
      "didInvalidate": false,
      "payloadIds": Object {
        "fruits": Array [
          1,
          2,
          3,
        ],
        "vegetables": Array [
          2,
        ],
      },
    },
    "eat:https://api.co/fruits": Object {
      "didInvalidate": true,
      "endedAt": "2017-01-01T00:00:00.000Z",
      "hasFailed": true,
      "hasSucceeded": false,
      "resourceName": "fruits",
    },
    "someOtherURL": Object {
      "didInvalidate": false,
      "payloadIds": Object {
        "fruits": Array [
          1,
        ],
      },
    },
    "someURL": Object {
      "didInvalidate": false,
      "resourceId": 2,
      "resourceName": "fruits",
    },
    "yetAnotherURL": Object {
      "didInvalidate": false,
      "payloadIds": Object {
        "seeds": Array [
          2,
        ],
        "vegetables": Array [
          1,
        ],
      },
    },
  },
  "resources": Object {
    "animals": Object {
      "1": "worm",
    },
    "fruits": Object {
      "1": "banana",
      "2": "cherry",
      "3": "apple",
    },
    "seeds": Object {
      "2": "pumpkin",
    },
    "vegetables": Object {
      "1": "potato",
      "2": "leek",
    },
  },
}
`;

exports[`getReducerCases INVALIDATE_ID empty state 1`] = `
Object {
  "requests": Object {},
}
`;

exports[`getReducerCases INVALIDATE_ID full state 1`] = `
Object {
  "requests": Object {
    "anotherURL": Object {
      "didInvalidate": false,
      "payloadIds": Object {
        "fruits": Array [
          1,
          2,
          3,
        ],
        "vegetables": Array [
          2,
        ],
      },
    },
    "eat:https://api.co/fruits": Object {
      "didInvalidate": true,
      "resourceName": "fruits",
    },
    "someOtherURL": Object {
      "didInvalidate": false,
      "payloadIds": Object {
        "fruits": Array [
          1,
        ],
      },
    },
    "someURL": Object {
      "didInvalidate": false,
      "resourceId": 2,
      "resourceName": "fruits",
    },
    "yetAnotherURL": Object {
      "didInvalidate": true,
      "payloadIds": Object {
        "seeds": Array [
          2,
        ],
        "vegetables": Array [
          1,
        ],
      },
    },
  },
  "resources": Object {
    "animals": Object {
      "1": "worm",
    },
    "fruits": Object {
      "1": "banana",
      "2": "cherry",
      "3": "apple",
    },
    "seeds": Object {
      "2": "pumpkin",
    },
    "vegetables": Object {
      "1": "potato",
      "2": "leek",
    },
  },
}
`;

exports[`getReducerCases INVALIDATE_REQUEST empty state 1`] = `
Object {
  "requests": Object {
    "eat:https://api.co/fruits": Object {
      "didInvalidate": true,
    },
  },
}
`;

exports[`getReducerCases INVALIDATE_REQUEST full state 1`] = `
Object {
  "requests": Object {
    "anotherURL": Object {
      "didInvalidate": false,
      "payloadIds": Object {
        "fruits": Array [
          1,
          2,
          3,
        ],
        "vegetables": Array [
          2,
        ],
      },
    },
    "eat:https://api.co/fruits": Object {
      "didInvalidate": true,
      "resourceName": "fruits",
    },
    "someOtherURL": Object {
      "didInvalidate": false,
      "payloadIds": Object {
        "fruits": Array [
          1,
        ],
      },
    },
    "someURL": Object {
      "didInvalidate": false,
      "resourceId": 2,
      "resourceName": "fruits",
    },
    "yetAnotherURL": Object {
      "didInvalidate": false,
      "payloadIds": Object {
        "seeds": Array [
          2,
        ],
        "vegetables": Array [
          1,
        ],
      },
    },
  },
  "resources": Object {
    "animals": Object {
      "1": "worm",
    },
    "fruits": Object {
      "1": "banana",
      "2": "cherry",
      "3": "apple",
    },
    "seeds": Object {
      "2": "pumpkin",
    },
    "vegetables": Object {
      "1": "potato",
      "2": "leek",
    },
  },
}
`;

exports[`getReducerCases INVALIDATE_RESOURCE empty state 1`] = `
Object {
  "requests": Object {},
}
`;

exports[`getReducerCases INVALIDATE_RESOURCE full state 1`] = `
Object {
  "requests": Object {
    "anotherURL": Object {
      "didInvalidate": true,
      "payloadIds": Object {
        "fruits": Array [
          1,
          2,
          3,
        ],
        "vegetables": Array [
          2,
        ],
      },
    },
    "eat:https://api.co/fruits": Object {
      "didInvalidate": true,
      "resourceName": "fruits",
    },
    "someOtherURL": Object {
      "didInvalidate": true,
      "payloadIds": Object {
        "fruits": Array [
          1,
        ],
      },
    },
    "someURL": Object {
      "didInvalidate": true,
      "resourceId": 2,
      "resourceName": "fruits",
    },
    "yetAnotherURL": Object {
      "didInvalidate": false,
      "payloadIds": Object {
        "seeds": Array [
          2,
        ],
        "vegetables": Array [
          1,
        ],
      },
    },
  },
  "resources": Object {
    "animals": Object {
      "1": "worm",
    },
    "fruits": Object {
      "1": "banana",
      "2": "cherry",
      "3": "apple",
    },
    "seeds": Object {
      "2": "pumpkin",
    },
    "vegetables": Object {
      "1": "potato",
      "2": "leek",
    },
  },
}
`;

exports[`getReducerCases RECEIVE empty state 1`] = `
Object {
  "requests": Object {
    "eat:https://api.co/fruits": Object {
      "didInvalidate": false,
      "endedAt": "2017-01-01T00:00:00.000Z",
      "expireAt": "2017-01-01T00:00:00.000Z",
      "fromCache": false,
      "hasFailed": false,
      "hasSucceeded": true,
      "metadata": undefined,
      "payloadIds": Object {
        "animals": Array [
          "1",
        ],
        "fruits": Array [
          "2",
          "1",
          "3",
        ],
      },
    },
  },
  "resolversHashes": Object {
    "requests": Object {
      "eat:https://api.co/fruits": Object {
        "animals": "7054a0150530f9b3dd67e1123b18684e",
        "fruits": "7c9540c48d3b4c3b7c9867b5e00315ef",
      },
    },
    "resources": Object {
      "_getResourcesHash": [Function],
      "fruits": "29978190b54cefaef1578d2192d02a52",
    },
  },
  "resources": Object {
    "animals": Object {
      "1": "worm",
    },
    "fruits": Object {
      "1": "banana",
      "2": "cherry",
      "3": "apple",
    },
  },
}
`;

exports[`getReducerCases RECEIVE full state 1`] = `
Object {
  "requests": Object {
    "anotherURL": Object {
      "didInvalidate": false,
      "payloadIds": Object {
        "fruits": Array [
          1,
          2,
          3,
        ],
        "vegetables": Array [
          2,
        ],
      },
    },
    "eat:https://api.co/fruits": Object {
      "didInvalidate": false,
      "endedAt": "2017-01-01T00:00:00.000Z",
      "expireAt": "2017-01-01T00:00:00.000Z",
      "fromCache": false,
      "hasFailed": false,
      "hasSucceeded": true,
      "metadata": undefined,
      "payloadIds": Object {
        "animals": Array [
          "1",
        ],
        "fruits": Array [
          "2",
          "1",
          "3",
        ],
      },
      "resourceName": "fruits",
    },
    "someOtherURL": Object {
      "didInvalidate": false,
      "payloadIds": Object {
        "fruits": Array [
          1,
        ],
      },
    },
    "someURL": Object {
      "didInvalidate": false,
      "resourceId": 2,
      "resourceName": "fruits",
    },
    "yetAnotherURL": Object {
      "didInvalidate": false,
      "payloadIds": Object {
        "seeds": Array [
          2,
        ],
        "vegetables": Array [
          1,
        ],
      },
    },
  },
  "resolversHashes": Object {
    "requests": Object {
      "eat:https://api.co/fruits": Object {
        "animals": "7054a0150530f9b3dd67e1123b18684e",
        "fruits": "7c9540c48d3b4c3b7c9867b5e00315ef",
      },
    },
    "resources": Object {
      "_getResourcesHash": [Function],
      "fruits": "29978190b54cefaef1578d2192d02a52",
    },
  },
  "resources": Object {
    "animals": Object {
      "1": "worm",
    },
    "fruits": Object {
      "1": "banana",
      "2": "cherry",
      "3": "apple",
    },
    "seeds": Object {
      "2": "pumpkin",
    },
    "vegetables": Object {
      "1": "potato",
      "2": "leek",
    },
  },
}
`;

exports[`getReducerCases RECEIVE_FROM_CACHE empty state 1`] = `
Object {
  "requests": Object {
    "eat:https://api.co/fruits": Object {
      "didInvalidate": false,
      "endedAt": "2017-01-01T00:00:00.000Z",
      "expireAt": "2017-01-01T00:00:00.000Z",
      "fromCache": true,
      "hasFailed": false,
      "hasSucceeded": true,
      "metadata": undefined,
      "payloadIds": Object {
        "fruits": Array [
          "2",
        ],
      },
      "resourceId": 2,
      "resourceName": "fruits",
      "startedAt": "2017-01-01T00:00:00.000Z",
    },
  },
  "resolversHashes": Object {
    "requests": Object {
      "eat:https://api.co/fruits": Object {
        "fruits": "1c68ab9503094fc81ee21c6e5a0eac8c",
      },
    },
    "resources": Object {
      "_getResourcesHash": [Function],
      "fruits": "cf252fdcd0c577918a558e3d5869780d",
    },
  },
}
`;

exports[`getReducerCases RECEIVE_FROM_CACHE full state 1`] = `
Object {
  "requests": Object {
    "anotherURL": Object {
      "didInvalidate": false,
      "payloadIds": Object {
        "fruits": Array [
          1,
          2,
          3,
        ],
        "vegetables": Array [
          2,
        ],
      },
    },
    "eat:https://api.co/fruits": Object {
      "didInvalidate": false,
      "endedAt": "2017-01-01T00:00:00.000Z",
      "expireAt": "2017-01-01T00:00:00.000Z",
      "fromCache": true,
      "hasFailed": false,
      "hasSucceeded": true,
      "metadata": undefined,
      "payloadIds": Object {
        "fruits": Array [
          "2",
        ],
      },
      "resourceId": 2,
      "resourceName": "fruits",
      "startedAt": "2017-01-01T00:00:00.000Z",
    },
    "someOtherURL": Object {
      "didInvalidate": false,
      "payloadIds": Object {
        "fruits": Array [
          1,
        ],
      },
    },
    "someURL": Object {
      "didInvalidate": false,
      "resourceId": 2,
      "resourceName": "fruits",
    },
    "yetAnotherURL": Object {
      "didInvalidate": false,
      "payloadIds": Object {
        "seeds": Array [
          2,
        ],
        "vegetables": Array [
          1,
        ],
      },
    },
  },
  "resolversHashes": Object {
    "requests": Object {
      "eat:https://api.co/fruits": Object {
        "fruits": "1c68ab9503094fc81ee21c6e5a0eac8c",
      },
    },
    "resources": Object {
      "_getResourcesHash": [Function],
      "fruits": "29978190b54cefaef1578d2192d02a52",
    },
  },
  "resources": Object {
    "animals": Object {
      "1": "worm",
    },
    "fruits": Object {
      "1": "banana",
      "2": "cherry",
      "3": "apple",
    },
    "seeds": Object {
      "2": "pumpkin",
    },
    "vegetables": Object {
      "1": "potato",
      "2": "leek",
    },
  },
}
`;

exports[`getReducerCases REQUEST empty state 1`] = `
Object {
  "requests": Object {
    "eat:https://api.co/fruits": Object {
      "didInvalidate": false,
      "endedAt": null,
      "expireAt": null,
      "fromCache": false,
      "hasFailed": false,
      "hasSucceeded": false,
      "resourceId": 2,
      "resourceName": "fruits",
      "startedAt": "2017-01-01T00:00:00.000Z",
    },
  },
}
`;

exports[`getReducerCases REQUEST full state 1`] = `
Object {
  "requests": Object {
    "anotherURL": Object {
      "didInvalidate": false,
      "payloadIds": Object {
        "fruits": Array [
          1,
          2,
          3,
        ],
        "vegetables": Array [
          2,
        ],
      },
    },
    "eat:https://api.co/fruits": Object {
      "didInvalidate": true,
      "endedAt": null,
      "expireAt": null,
      "fromCache": false,
      "hasFailed": false,
      "hasSucceeded": false,
      "resourceId": 2,
      "resourceName": "fruits",
      "startedAt": "2017-01-01T00:00:00.000Z",
    },
    "someOtherURL": Object {
      "didInvalidate": false,
      "payloadIds": Object {
        "fruits": Array [
          1,
        ],
      },
    },
    "someURL": Object {
      "didInvalidate": false,
      "resourceId": 2,
      "resourceName": "fruits",
    },
    "yetAnotherURL": Object {
      "didInvalidate": false,
      "payloadIds": Object {
        "seeds": Array [
          2,
        ],
        "vegetables": Array [
          1,
        ],
      },
    },
  },
  "resources": Object {
    "fruits": Object {
      "1": "banana",
      "2": "cherry",
      "3": "apple",
    },
    "seeds": Object {
      "2": "pumpkin",
    },
    "vegetables": Object {
      "1": "potato",
      "2": "leek",
    },
  },
}
`;

exports[`getReducerCases RESET_ALL empty state 1`] = `Object {}`;

exports[`getReducerCases RESET_ALL full state 1`] = `Object {}`;

exports[`getReducerCases RESET_RESOURCE empty state 1`] = `
Object {
  "requests": Object {},
  "resolversHashes": Object {
    "requests": Object {},
    "resources": Object {
      "fruits": "cf252fdcd0c577918a558e3d5869780d",
    },
  },
  "resources": Object {
    "fruits": undefined,
  },
}
`;

exports[`getReducerCases RESET_RESOURCE full state 1`] = `
Object {
  "requests": Object {
    "yetAnotherURL": Object {
      "didInvalidate": false,
      "payloadIds": Object {
        "seeds": Array [
          2,
        ],
        "vegetables": Array [
          1,
        ],
      },
    },
  },
  "resolversHashes": Object {
    "requests": Object {},
    "resources": Object {
      "fruits": "cf252fdcd0c577918a558e3d5869780d",
    },
  },
  "resources": Object {
    "animals": Object {
      "1": "worm",
    },
    "fruits": undefined,
    "seeds": Object {
      "2": "pumpkin",
    },
    "vegetables": Object {
      "1": "potato",
      "2": "leek",
    },
  },
}
`;

exports[`getReducerCases reducer cases keys 1`] = `
Object {
  "FAIL": [Function],
  "INVALIDATE_ID": [Function],
  "INVALIDATE_REQUEST": [Function],
  "INVALIDATE_RESOURCE": [Function],
  "RECEIVE": [Function],
  "RECEIVE_FROM_CACHE": [Function],
  "REQUEST": [Function],
  "RESET_ALL": [Function],
  "RESET_RESOURCE": [Function],
}
`;
